--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ license-file = "LICENSE"
 keywords = ["async", "tokio", "schedule", "cron"]
 categories = ["asynchronous", "concurrency", "date-and-time"]
 repository = "https://github.com/dedefer/tokio_schedule"
+homepage = "https://github.com/dedefer/tokio_schedule"
+description = "This crate helps schedule tasks in tokio runtime"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
