--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: publish
-          args: --token ${{ CRATES_IO_TOKEN }}
+          args: --token ${{ secrets.CRATES_IO_TOKEN }}
